--- a/index.html
+++ b/index.html
@@ -418,58 +418,35 @@
         <input type="hidden" id="js-mainPage__detected">
         <footer class="footer">
             <div class="footer__container">
-                <a href="http://webdepartament.com/ru/?v=1#" class="footer__logo">
-                    <svg class="logo__svg" width="830px" height="184px" viewBox="0 0 830 184" version="1.1"
-                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                        <!-- Generator: Sketch 3.7.2 (28276) - http://www.bohemiancoding.com/sketch -->
-                        <title>Group 6 Copy</title>
-                        <desc>Created with Sketch.</desc>
-                        <defs></defs>
-                        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                            <g id="Desktop-HD-Copy" transform="translate(-545.000000, -469.000000)" fill="#FFFFFF">
-                                <g id="Group-6-Copy" transform="translate(545.000000, 469.000000)">
-                                    <path d="M466.495657,30.7276248 L476.485162,30.7276248 L503.939246,95.6853332 L491.791033,95.6853332 L485.044463,79.130967 L457.312621,79.130967 L450.546558,95.6853332 L439.046445,95.6853332 L466.495657,30.7276248 Z M461.673893,68.4911327 L480.666135,68.4911327 L471.215089,45.4434277 L461.673893,68.4911327 Z"
-                                          id="Fill-135"></path>
-                                    <polygon id="Fill-136"
-                                             points="489.757804 0.0396675325 478.474535 0.0931706993 471.489191 16.5916018 482.984432 16.5916018"></polygon>
-                                    <path d="M0.184083876,30.8922687 L1.39257038,30.8922687 C5.28847748,30.8922687 14.5616622,30.615025 19.2859673,30.615025 C45.2562448,30.615025 55.7354796,45.5156569 55.7354796,62.6463981 C55.7354796,80.8812502 43.307073,95.8742967 18.545282,95.8742967 C14.6542479,95.8742967 7.42038411,95.6894676 1.48028311,95.6894676 L0.184083876,95.6894676 L0.184083876,30.8922687 Z M11.5916117,41.5393988 L11.5916117,85.0399054 C14.7468335,85.2247345 17.3416685,85.2247345 18.9156247,85.2247345 C34.5894023,85.2247345 43.6774157,76.3383449 43.6774157,62.6463981 C43.6774157,49.5891935 34.5894023,41.2572912 19.1056689,41.2572912 C16.4133754,41.2572912 14.1913196,41.3497058 11.5916117,41.5393988 L11.5916117,41.5393988 Z"
-                                          id="Fill-137"></path>
-                                    <polygon id="Fill-138"
-                                             points="81.8707058 30.8922687 119.431246 30.8922687 119.431246 41.5393988 93.2782336 41.5393988 93.2782336 57.6438521 116.646367 57.6438521 116.646367 68.2861183 93.2782336 68.2861183 93.2782336 85.0399054 120.357103 85.0399054 120.357103 95.6894676 81.8707058 95.6894676"></polygon>
-                                    <path d="M151.607443,95.6872788 L151.607443,30.8925119 C155.225593,30.8925119 165.51722,30.7125467 170.061227,30.7125467 C189.167983,30.7125467 195.19336,40.8878762 195.19336,51.5350064 C195.19336,62.5469309 186.938618,72.5471592 171.454884,72.5471592 C169.505713,72.5471592 165.794977,72.5471592 163.014971,72.2650516 L163.014971,95.6872788 L151.607443,95.6872788 Z M163.014971,41.539642 L163.014971,61.4379562 C165.702391,61.7200638 168.484834,61.900029 171.084542,61.900029 C177.850604,61.900029 183.135296,58.6655193 183.135296,51.4425918 C183.135296,44.6817371 178.964069,41.3548129 171.177127,41.3548129 C168.862486,41.3548129 166.077607,41.4472275 163.014971,41.539642 L163.014971,41.539642 Z"
-                                          id="Fill-139"></path>
-                                    <path d="M237.072778,30.7093851 L247.091521,30.7093851 L274.540732,95.6841172 L262.390083,95.6841172 L255.62402,79.1151593 L227.892179,79.1151593 L221.126116,95.6841172 L209.623566,95.6841172 L237.072778,30.7093851 Z M232.251014,68.472893 L251.260312,68.472893 L241.806829,45.4251879 L232.251014,68.472893 Z"
-                                          id="Fill-140"></path>
-                                    <path d="M300.337046,95.6872788 L300.337046,30.8925119 C303.955196,30.8925119 318.235316,30.7125467 320.091902,30.7125467 C337.805001,30.7125467 343.645207,39.4992258 343.645207,50.7032753 C343.645207,61.8076144 336.508802,67.3646479 331.124215,69.215371 L351.437021,95.6872788 L337.61983,95.6872788 L319.72156,71.4333205 L311.744574,71.4333205 L311.744574,95.6872788 L300.337046,95.6872788 Z M311.744574,41.539642 L311.744574,60.7910542 L319.161173,60.7910542 C325.746937,60.7910542 331.587143,57.4568342 331.587143,50.7956899 C331.587143,45.7055932 328.809573,41.3548129 319.531515,41.3548129 C317.399609,41.3548129 314.80721,41.4472275 311.744574,41.539642 L311.744574,41.539642 Z"
-                                          id="Fill-141"></path>
-                                    <polygon id="Fill-142"
-                                             points="369.939047 30.8922687 423.446249 30.8922687 423.446249 41.5393988 402.400066 41.5393988 402.400066 95.6894676 390.990102 95.6894676 390.990102 41.5393988 369.939047 41.5393988"></polygon>
-                                    <polygon id="Fill-143"
-                                             points="530.039875 30.8922687 541.539988 30.8922687 563.704508 61.1604693 584.848149 30.8922687 595.605141 30.8922687 595.605141 95.6894676 584.287762 95.6894676 584.287762 48.849877 563.797094 77.6394447 562.130552 77.6394447 541.447403 49.1271207 541.447403 95.6894676 530.039875 95.6894676"></polygon>
-                                    <polygon id="Fill-144"
-                                             points="627.5316 30.8922687 665.09214 30.8922687 665.09214 41.5393988 638.939128 41.5393988 638.939128 57.6438521 662.307261 57.6438521 662.307261 68.2861183 638.939128 68.2861183 638.939128 85.0399054 666.017997 85.0399054 666.017997 95.6894676 627.5316 95.6894676"></polygon>
-                                    <polygon id="Fill-145"
-                                             points="740.614262 95.6872788 704.912745 50.7956899 704.912745 95.6872788 694.243466 95.6872788 694.243466 30.8925119 703.331479 30.8925119 739.040306 75.9689299 739.040306 30.8925119 749.702276 30.8925119 749.702276 95.6872788"></polygon>
-                                    <polygon id="Fill-146"
-                                             points="775.837989 30.8942142 775.837989 41.5413444 796.896354 41.5413444 796.896354 95.6841172 808.299009 95.6841172 808.299009 41.5413444 829.350064 41.5413444 829.350064 30.8942142"></polygon>
-                                </g>
-                            </g>
-                        </g>
-                    </svg>
-                </a>
-                <div class="footer__address">МОСКВА, БЕРСЕНЕВСКАЯ НАБЕРЕЖНАЯ, Д. 8, СТРОЕНИЕ 1
+                <div class="footer__contact">
+                    <a href="tel:+79031915501" class="footer__contact-web">WEB DEPARTΔMENT</a>
+                    <div class="footer__contact-title">КИЕВ, БУЛЬВАР ШЕВЧЕНКА, 62</div>
+                </div>
+                <!--<div class="footer__contact-titlt">-->
+                    <!--<a href="http://webdepartament.com/ru/?v=1#"-->
+                       <!--style="-->
+                            <!--text-decoration: none;-->
+                            <!--color: #fff;-->
+                            <!--font-weight: bold;-->
+                            <!--font-family: circe-bold;-->
+
+                    <!--" >-->
+                        <!--<h5 style="font-size: 20px;"></h5>-->
+                    <!--</a>-->
+                <!--</div>-->
+                <div class="footer__address">
                 </div>
                 <div class="footer__contact">
                     <div class="footer__contact-title">ГЛАВНЫЙ ОФИС</div>
-                    <a href="tel:+74955323236" class="footer__contact-phone">EVENT@DEPARTAMENT.COM</a>
+                    <a href="tel:+74955323236" class="footer__contact-phone">EVENT@WEBDEPARTAMENT.COM</a>
                 </div>
                 <div class="footer__contact">
                     <div class="footer__contact-title">ДЛЯ НОВЫХ СОТРУДНИКОВ</div>
-                    <a href="tel:+79031915501" class="footer__contact-phone">HR@DEPARTAMENT.COM</a>
+                    <a href="tel:+79031915501" class="footer__contact-phone">HR@WEBDEPARTAMENT.COM</a>
                 </div>
                 <div class="footer__contact">
                     <div class="footer__contact-title">ДЛЯ НОВЫХ КЛИЕНТОВ</div>
-                    <a href="tel:+74952480774" class="footer__contact-phone">NEW@DEPARTAMENT.COM</a>
+                    <a href="tel:+74952480774" class="footer__contact-phone">NEW@WEBDEPARTAMENT.COM</a>
                 </div>
 
             </div>
