--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <section class="about__stats js-content--white">
 
             <div class="sections__title_skill">
-                <h3 style="font-size: 5.2rem;         text-transform: uppercase; font-family: "circe-bold";">какие <b style="font-weight: bold;    font-family: circe-bold;">технологии</b> используем</h3>
+                <h3 style="font-size: 4.8rem;         text-transform: uppercase; font-family: "circe-bold";">какие <b style="font-weight: bold;    font-family: circe-bold;">технологии</b> используем</h3>
             </div>
             <div class="about__stats-container">
                 <div class="about__stats-tabs">
@@ -419,22 +419,8 @@
         <footer class="footer">
             <div class="footer__container">
                 <div class="footer__contact">
-                    <a href="tel:+79031915501" class="footer__contact-web">WEB DEPARTΔMENT</a>
+                    <a href="" class="footer__contact-web">WEB DEPARTΔMENT</a>
                     <div class="footer__contact-title">КИЕВ, БУЛЬВАР ШЕВЧЕНКА, 62</div>
-                </div>
-                <!--<div class="footer__contact-titlt">-->
-                    <!--<a href="http://webdepartament.com/ru/?v=1#"-->
-                       <!--style="-->
-                            <!--text-decoration: none;-->
-                            <!--color: #fff;-->
-                            <!--font-weight: bold;-->
-                            <!--font-family: circe-bold;-->
-
-                    <!--" >-->
-                        <!--<h5 style="font-size: 20px;"></h5>-->
-                    <!--</a>-->
-                <!--</div>-->
-                <div class="footer__address">
                 </div>
                 <div class="footer__contact">
                     <div class="footer__contact-title">ГЛАВНЫЙ ОФИС</div>
