--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="centerTitle__text">
 
                     <div class="centerTitle__text">
-                        <h2>WEB DEPARTΔMENT</h2>
+                        <h2 style="">WEB DEPARTΔMENT</h2>
                     </div>
 
                 </div>
@@ -139,7 +139,7 @@
         <section class="about__stats js-content--white">
 
             <div class="sections__title_skill">
-                <h3 style="font-size: 4.8rem;         text-transform: uppercase; font-family: "circe-bold";">какие <b style="font-weight: bold;    font-family: circe-bold;">технологии</b> используем</h3>
+                <h3 style="">какие <b style="font-weight: bold;    font-family: circe-bold;">технологии</b> используем</h3>
             </div>
             <div class="about__stats-container">
                 <div class="about__stats-tabs">
